Apache Tez Change Log
=====================

Release 0.7.2 Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3507. Task logs link when editing url from one task to another.
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct
  TEZ-3487. Improvements in travis yml file to get builds to work.
  TEZ-3483. Create basic travis yml file for Tez.
  TEZ-3437. Improve synchronization and the progress report behavior for Inputs from TEZ-3317.
  TEZ-3317. Speculative execution starts too early due to 0 progress.
  TEZ-3452. Auto-reduce parallelism calculation can overflow with large inputs
  TEZ-3439. Tez joinvalidate fails when first input argument size is bigger than the second.
  TEZ-3464. Fix findbugs warnings in tez-dag mainLoop
  TEZ-3335. DAG client thinks app is still running when app status is null
  TEZ-3460. Fix precommit release audit warning.
  TEZ-3368. NPE in DelayedContainerManager
  TEZ-3440. Shuffling to memory can get out-of-sync when fetching multiple compressed map outputs
  TEZ-3426. Second AM attempt launched for session mode and recovery disabled for certain cases
  TEZ-2852. TestVertexImpl fails due to race in AsyncDispatcher.
  TEZ-3326. Display JVM system properties in AM and task logs.
  TEZ-3009. Errors that occur during container task acquisition are not logged.
  TEZ-3413. ConcurrentModificationException in HistoryEventTimelineConversion for AppLaunchedEvent.
  TEZ-3286. Allow clients to set processor reserved memory per vertex (instead of per container).
  TEZ-3223. Support a NullHistoryLogger to disable history logging if needed.
  TEZ-3293. Fetch failures can cause a shuffle hang waiting for memory merge that never starts.
  TEZ-3305. TestAnalyzer fails on Hadoop 2.7.
  TEZ-3304. TestHistoryParser fails with Hadoop 2.7.